# persephone_client

./: .gitignore  README.md  pyproject.toml  requirements.txt
persephone_client/: __init__.py  main.py
persephone_client/core/repositories/persephone/: interface.py
persephone_client/core/services/message_validator/: interface.py
persephone_client/core/services/persephone/: interface.py
persephone_client/core/services/schema_validator/: interface.py
persephone_client/domain/enums/quote_type/: enum.py
persephone_client/domain/enums/risk_classification/: enum.py
persephone_client/domain/enums/schema/: enum.py
persephone_client/domain/enums/status/: enum.py
persephone_client/domain/exceptions/: exception.py
persephone_client/domain/schemas/common/device_info/: __init__.py  schema.py
persephone_client/domain/schemas/ebisu/: __init__.py
persephone_client/domain/schemas/ebisu/cash_flow_withdrawal_to_external_bank/: schema.py
persephone_client/domain/schemas/ebisu/delete_client_bank_account/: __init__.py  schema.py
persephone_client/infraestructure/env_config/: __init__.py
persephone_client/infraestructure/kafka/: infraestructure.py
persephone_client/repositories/persephone/: repository.py
persephone_client/services/message_validator/: service.py
persephone_client/services/persephone/: service.py
persephone_client/services/schema_validator/: service.py
tests/persephone_client/: test_main.py
tests/persephone_client/services/queue_producer/: test_service.py
tests/persephone_client/services/schema_validator/: test_service.py
(+46 files in other folders)
